[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Nunito/Nunito-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/gui/setting/Setting.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[node name="Setting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 64
custom_constants/margin_top = 32
custom_constants/margin_left = 64
custom_constants/margin_bottom = 32

[node name="Label" type="Label" parent="MarginContainer"]
margin_left = 64.0
margin_top = 32.0
margin_right = 258.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 1 )
text = "Setting"

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -40.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/margin_right = 32
custom_constants/margin_top = 16
custom_constants/margin_left = 32
custom_constants/margin_bottom = 16

[node name="DoneBtn" type="Button" parent="MarginContainer2"]
margin_left = 32.0
margin_top = 16.0
margin_right = 102.0
margin_bottom = 56.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "Done"
flat = true

[node name="MarginContainer3" type="MarginContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.466667
anchor_right = 0.8
anchor_bottom = 0.670333
margin_bottom = 3.05176e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer3"]
margin_right = 614.0
margin_bottom = 122.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer3/HBoxContainer"]
margin_top = 44.0
margin_right = 84.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 3 )
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
margin_left = 88.0
margin_right = 614.0
margin_bottom = 122.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -80.0
max_value = 6.0
value = -37.0

[connection signal="pressed" from="MarginContainer2/DoneBtn" to="." method="_on_DoneBtn_pressed"]
[connection signal="value_changed" from="MarginContainer3/HBoxContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
